# Karpov-s-Agent

./: .gitignore  README.md  docker-compose.yaml
backend/: .env.example  .gitignore  Dockerfile  README.md  langgraph.json  langgraph_app.py  pyproject.toml
backend/.langgraph_api/: .langgraph_ops.pckl
backend/app/: main.py
backend/app/agents/: advanced_agent.py  base_class.py  basic_agent.py
backend/app/api/: __init__.py  auth_dependencies.py  dependencies.py
backend/app/core/: config.py  lifespan.py  mcp_config.py
backend/app/models/: dtos.py  schemas.py
backend/app/orchestrator/: agent_orchestrator.py  intent_classifier.py
backend/app/services/: authentication_services.py  intent_classifier_service.py  memory_service.py  streaming_service.py  title_service.py
backend/app/tools/: registry.py  request_more_tools.py  search_tools.py  tool_registry.py
backend/certs/: public_key.pem
backend/docs/: academic_calendar.md  campus_map_and_locations.md  clubs_and_organizations.md  course_catalog.md  dining_and_housing.md  financial_aid_faq.md  it_services.md  library_services.md  registration_faq.md  student_handbook.md
backend/ingestion/: .ingestion_manifest.json  __init__.py  chunker.py  config.py  embedder.py  loader.py  logger.py  main.py  parser.py  pipeline.py  search_test.py  test_search.py  vector_store.py
backend/ingestion/docs/: clubs_and_organizations.md  dining_and_housing.md  library_services.md  registration_faq.md
backend/ingestion/documents/: __init__.py  academic_calendar.py  campus_map_and_locations.py  clubs_and_organizations.py  (+7 more)
(+24 files in other folders)
